traces/bug_187.txt
examples++-load/aniso.cpp:137: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/aniso.cpp:137:1: initialization of callDoLoadInit
135.   #define  WITH_NO_INIT
136.   #include "msh3.hpp"
137. > LOADFUNC(Load_Init)

examples++-load/aniso.cpp:137:1: call to DoLoadInit
135.   #define  WITH_NO_INIT
136.   #include "msh3.hpp"
137. > LOADFUNC(Load_Init)

examples++-load/aniso.cpp:137:1: call to addInitFunct
  135.   #define  WITH_NO_INIT
  136.   #include "msh3.hpp"
  137. > LOADFUNC(Load_Init)

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
